# safecass

./: .gitignore  .mailmap  .travis.yml  AUTHORS.txt  CMakeLists.txt  INSTALL  LICENSE  LICENSE.txt  README.md  doxygen.conf  index.html  notes.txt  params.json  travis.sh
cmake/: FindBoost.cmake  FindBoostMSM.cmake  FindIce.cmake  (+20 more)
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt  main_cisst.cpp
examples/event/: CMakeLists.txt  main_cisst.cpp
examples/filter/: CMakeLists.txt  filter.json  main_cisst.cpp
examples/filter-obsolete/: CMakeLists.txt  main_cisst.cpp
examples/latency/: CMakeLists.txt  main.cpp  main_cisst.cpp
examples/monitor/: CMakeLists.txt  main_cisst.cpp  monitor.json
examples/period/: CMakeLists.txt  main_cisst.cpp  period.json
examples/simple/: CMakeLists.txt  main_cisst.cpp
examples/state/: CMakeLists.txt  CMakeLists.txt.old  components.cpp  components.h  forceSensor.json  main.cpp  main_cisst.cpp
examples/threeComponents/: CMakeLists.txt  Control.json  Sensor.json  casros_JR3.json  components.cpp  components.h  main_cisst.cpp
libs/: CMakeLists.txt  SCDLLDefines.h  SFDLLDefines.h  config.h.in  coordinator.cpp  coordinator.h
libs/FDD/: fault.cpp  fault.h
libs/adapters/cisst/: cisstAccessor.cpp  cisstAccessor.h  cisstCoordinator.cpp  cisstCoordinator.h  cisstDic.h  cisstEventLocation.cpp  cisstEventLocation.h  cisstHistoryBuffer.cpp  cisstHistoryBuffer.h  cisstMonitor.cpp  cisstMonitor.h
libs/common/: color_console.h  common.cpp  common.h  dict.cpp  dict.h  json.cpp  json.h  jsonSerializer.cpp  jsonSerializer.h  jsonwrapper.cpp  jsonwrapper.h  utils.cpp  utils.h  xtime.h
libs/common/code/: common.cpp  dict.cpp  jsonwrapper.cpp  utils.cpp
libs/communicator/: baseIce.cpp  baseIce.h  config.pub  config.sub  curlWrapper.cpp  curlWrapper.h  monitor.ice  monitorFDD.ice  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h  topic_def.h
libs/communicator/slice/: communicator.ice  messages.ice  monitorSamples.ice
libs/db/: MongoDB.cpp  MongoDB.h
libs/fdd/: event.h  eventApp.h  eventLocationBase.cpp  eventLocationBase.h  eventPublisherBase.h  fault.cpp  fault.h  filterBase.cpp  filterBase.h  filterFactory.h  historyBufferBase.h  signal.cpp  signal.h
libs/fdd/code/: event.cpp  eventApp.cpp  eventLocationBase.cpp  filterBase.cpp  filterFactory.cpp  signal.cpp
libs/fdd/filters/: _old.h  bypass.cpp  bypass.h  changeDetection.h  nop.h  norm.h  onOff.h  threshold.cpp  threshold.h  trendVel.h
libs/fdd/filters/code/: arithmetic.cpp  bypass.cpp  changeDetection.cpp  nop.cpp  norm.cpp  onOff.cpp  threshold.cpp  trendVel.cpp
libs/fdd/filters/json/: framework_filters.json
libs/fdds/: fault.cpp  fault.h
libs/gcm/: gcm.cpp  gcm.h
libs/monitor/: monitor.cpp  monitor.h
libs/monitor/cisst/: cisstMonitor.cpp  cisstMonitor.h
libs/safecass/: event.h  eventLocationBase.h  eventPublisherBase.h  filterBase.h  gcm.h  historyBuffer.h  historyBufferBase.h  paramBase.h  paramEigen.h  signal.h  signalAccessor.h  signalElement.h  state.h  stateEventHandler.h  statemachine.h
libs/safecass/code/: event.cpp  eventLocationBase.cpp  filterBase.cpp  gcm.cpp  historyBuffer.cpp  signal.cpp  signalElement.cpp  state.cpp  stateEventHandler.cpp  statemachine.cpp
libs/statemachine/: state.cpp  state.h  stateEventHandler.cpp  stateEventHandler.h  statemachine.cpp  statemachine.h
libs/supervisor/: coordinator.cpp  coordinator.h  supervisor.cpp  supervisor.h
programs/: CMakeLists.txt
programs/console/: CMakeLists.txt  accessor.cpp  accessor.h  cmd_event.cpp  cmd_filter.cpp  cmd_state.cpp  command_line_interpreter.hpp  communicator_ice.cpp  communicator_ice.h  main_cisst.cpp
programs/supervisor/: CMakeLists.txt  main.cpp  main_cisst.cpp
programs/supervisor/Qt/: CMakeLists.txt  main.cpp  supervisorQtComponent.cpp  supervisorQtComponent.h  supervisorQtWidget.ui
programs/supervisor/Qt/html/: RGraph.common.core.js  RGraph.line.js  javascript.note.txt  stream.html
programs/supervisor/Qt/html/cubism/: index.html  period.html  style.css
programs/viewer/: CMakeLists.txt  accessor.cpp  accessor.h  main.cpp  sample.html  style.css  viewerQtComponent.cpp  viewerQtComponent.h  viewerQtWidget.ui  wheel.html  wheel.json
programs/viewer/QtJsBridge/: jsApiHandler.cpp  jsApiHandler.h  jsApiProxy.cpp  jsApiProxy.h  jsCppBridge.cpp  jsCppBridge.h
tests/: CMakeLists.txt  GCMHelper.cpp  GCMHelper.h  NOTE  config.h.in  main.cpp  sample.json  testEvent.cpp  testFilter.cpp  testGCM.cpp  testGCM.h  testGraph.cpp  testHistoryBuffer.cpp  testInput.cpp  testJson.cpp  testJson.h  testParams.cpp  testSignalAccessor.cpp  testSignalElement.cpp  testState.cpp  testState.h  testStateMachine.cpp  testTime.cpp  testUtil.cpp  testUtil.h  test_json.h
tests/cppunit/: CMakeLists.txt  main.cpp  testGCM.cpp  testJson.h  testState.cpp  testState.h
tests/data/: graphviz-example-fsm.dot  graphviz-example-path1.dot  graphviz-example-path2.dot  graphviz-example-subgraph2.dot  graphviz-example1.dot  graphviz-example2.dot
tools/: CMakeLists.txt
tools/IceBox/: config.icebox  config.service
tools/console/: CMakeLists.txt  accessor.cpp  accessor.h  cmd_connection.cpp  cmd_event.cpp  cmd_filter.cpp  cmd_service.cpp  cmd_state.cpp  command_line_interpreter.hpp  main_cisst.cpp
tools/cube/: collector-config.js  collector.js  evaluator-config.js  evaluator.js  runCollector.sh  runDBCube.sh  runEvaluator.sh
tools/eventViewer/: ref.txt
tools/eventViewer/sample/: data.json  data.json.many  timeline.html
tools/launchIceBox/: config.service  launch.sh  launchIceBox.sh
tools/scripts/: createMongoDB.js  runDBCube.sh
tools/timeline/: data.json  f1.js  timeline.html
tools/timeline/sample/: data.json  data.json.few  data.json.many  data.json.mini  randomData.js  timeline.html
tools/viewer/: CMakeLists.txt  accessor.cpp  accessor.h  main.cpp  note.txt  style.css  tooltip.js  viewerQtComponent.cpp  viewerQtComponent.h  viewerQtWidget.ui  wheel.html
tools/viewer/QtJsBridge/: jsApiHandler.cpp  jsApiHandler.h  jsApiProxy.cpp  jsApiProxy.h  jsCppBridge.cpp  jsCppBridge.h
(+2 files in other folders)
