#------------------------------------------------------------------------
#
# CASROS: Component-based Architecture for Safe Robotic Systems
#
# Copyright (C) 2012-2015 Min Yang Jung and Peter Kazanzides
#
#------------------------------------------------------------------------
#
# Created on   : Jul 1, 2012
# Last revision: Mar 23, 2015
# Author       : Min Yang Jung (myj@jhu.edu)
# Github       : https://github.com/minyang/casros
#
add_subdirectory(monitor)
add_subdirectory(filter)
#add_subdirectory(simple)
#add_subdirectory(application)
